updating make-volume, updating project deps