@@ -3,6 +3,8 @@
   :url "http://example.com/FIXME"
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
-  :dependencies [[org.clojure/clojure "1.5.0-RC17"]
-                 [com.postspectacular/structgen "0.1.1"]
-                 [com.postspectacular/simplecl "0.1.4"]])
+  :dependencies [[org.clojure/clojure "1.4.0"]
+                 [com.postspectacular/structgen "0.1.2"]
+                 [com.postspectacular/simplecl "0.1.5"]
+                 [com.postspectacular/piksel "0.1.4"]]
+  :jvm-opts ["-server" "-Xms1g" "-Xmx2g" "-XX:+AggressiveOpts" "-XX:+UseParNewGC"])
